# pythermite

./: .gitignore  pyproject.toml
src/thermite/: __init__.py  libthermite.dylib  thermite.py
