[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermite"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "numpy",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.package-data]
myModule = ["*.dll", "*.dylib"]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

