[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermite"
version = "0.0.1"
authors = [
  { name="Sherif Abdou", email="sherif_abdou@outlook.com" },
]
description = "Thermite bindings for python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "numpy",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.package-data]
thermite = ["*.dll", "*.dylib", "*.so"]


